syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package account;

service AccountService {
    rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse);
    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
    rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
    rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse);
}

message Account {
    string id = 1;
    string global_id = 2;
    string public_code = 3;
    string username = 4;
    string avatar = 5;
    string given_name = 6;
    string family_name = 7;
    string middle_name = 8;
    string email = 9;
    bool email_verified = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message ListAccountsResponse {
    bool success = 1;
    repeated Account accounts = 4;
    string next_page_token = 5;
    int64 total_size = 6;
}

message ListAccountsRequest {
    int32 page_size = 2;
    string page_token = 3;
}

message GetAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message GetAccountRequest {
    string user_id = 1;
}

message CreateAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message CreateAccountRequest {
    string request_id = 42;
    string global_id = 2;
    string username = 4;
    string avatar = 5;
    string given_name = 6;
    string family_name = 7;
    string middle_name = 8;
    string email = 9;
}

message DeleteAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message DeleteAccountRequest {
    string request_id = 42;
    string user_id = 1;
}

message UpdateAccountResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        Account account = 4;
    }
}

message UpdateAccountRequest {
    string request_id = 42;
    string user_id = 1;
    optional string global_id = 2;
    optional string public_code = 3;
    optional string username = 4;
    optional string avatar = 5;
    optional string given_name = 6;
    optional string family_name = 7;
    optional string middle_name = 8;
    optional string email = 9;
    optional bool email_verified = 10;
}
